update company info

--- a/public/index.html
+++ b/public/index.html
@@ -873,7 +873,7 @@
 
     <div class="article-style">
       <p>I am a PhD student at the UNBC <a href="https://www.ffishlab.ca/" target="_blank" rel="noopener">Freshwater Fish Ecology lab</a>. We are using many years of acoustic telemetry data and Bayesian models to make inferences about White Sturgeon movement in the Columbia River.</p>
-<p>I was previously a Computational Biologist at <a href="https://www.poissonconsulting.ca/" target="_blank" rel="noopener">Poisson Consulting</a>, currently owner of <a href="https://www.northbeachconsulting.ca/" target="_blank" rel="noopener">North Beach Consulting</a> and am very enthusiastic about R, spatial data/maps and (interactive) data visualization.</p>
+<p>I was previously a Computational Biologist at <a href="https://www.poissonconsulting.ca/" target="_blank" rel="noopener">Poisson Consulting</a> and am very enthusiastic about R, spatial data/maps, database design and (interactive) data visualization. If you&rsquo;d like to hire me, check out my <a href="https://www.northbeachconsulting.ca/" target="_blank" rel="noopener">consulting website</a>.</p>
 <p>I am also a songwriter and avid surfer living on the north coast of Haida Gwaii. You can check out recordings from my band <a href="https://rustymouldandthesugaragates.bandcamp.com/" target="_blank" rel="noopener">Rusty Mould and the Sugar Agates.</a></p>
 
     </div>
