--- a/public/index.html
+++ b/public/index.html
@@ -872,9 +872,8 @@
     
 
     <div class="article-style">
-      <p>I am a PhD student at the UNBC <a href="https://www.ffishlab.ca/" target="_blank" rel="noopener">Freshwater Fish Ecology lab</a>. We are using many years of acoustic telemetry data and Bayesian models to make inferences about White Sturgeon movement in the Columbia River.</p>
-<p>More generally, I am very interested in all things R, spatial data/maps, database design and (interactive) data visualization. Check out <a href="htpps://www.fishydata.netlify.app">my blog</a> and my <a href="https://www.northbeachconsulting.ca/" target="_blank" rel="noopener">consulting website</a> for more.</p>
-<p>Also check out some recordings from my band <a href="https://rustymouldandthesugaragates.bandcamp.com/" target="_blank" rel="noopener">Rusty Mould and the Sugar Agates.</a>!</p>
+      <p>I am a PhD student at the UNBC <a href="https://www.ffishlab.ca/" target="_blank" rel="noopener">Freshwater Fish Ecology lab</a>. We are using many years of acoustic telemetry data and Bayesian models to make inferences about White Sturgeon movement in the Columbia River. More generally, I am interested in all things R, spatial data/maps, database design and (interactive) data visualization.</p>
+<p>Check out <a href="htpps://www.fishydata.netlify.app">my blog</a>, my <a href="https://www.northbeachconsulting.ca/" target="_blank" rel="noopener">consulting website</a> and some recordings from my band <a href="https://rustymouldandthesugaragates.bandcamp.com/" target="_blank" rel="noopener">Rusty Mould and the Sugar Agates</a>!</p>
 
     </div>
 
